WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192022
Safe browsing warning details need to be visible on High Sierra
https://bugs.webkit.org/show_bug.cgi?id=192022
Summary
Safe browsing warning details need to be visible on High Sierra
Alex Christensen
Reported
2018-11-27 11:37:42 PST
Safe browsing warning details need to be visible on High Sierra
Attachments
Patch
(6.58 KB, patch)
2018-11-27 11:42 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-11-27 11:42:26 PST
Created
attachment 355753
[details]
Patch
Tim Horton
Comment 2
2018-11-27 13:22:56 PST
Comment on
attachment 355753
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=355753&action=review
> Source/WebKit/ChangeLog:8 > + Something about AppKit, autolayout, view insertion order, and NSTextView makes the text layout with initial size of {0, 0} on High Sierra.
The verb form is "lay out". Also this is super vague. And a weirdly pseudoscientific fix.
Alex Christensen
Comment 3
2018-11-27 16:15:20 PST
https://trac.webkit.org/changeset/238585/webkit
Radar WebKit Bug Importer
Comment 4
2018-11-27 16:16:39 PST
<
rdar://problem/46293149
>
Truitt Savell
Comment 5
2018-11-28 09:41:05 PST
It looks like the change in
https://trac.webkit.org/changeset/238585/webkit#file4
has caused an API failure on iOS Failed TestWebKitAPI.SafeBrowsing.VisitUnsafeWebsite /Volumes/Data/slave/ios-simulator-12-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:215 Expected: (warning.subviews.firstObject.subviews[2].frame.size.height) > (0), actual: 0 vs 0
Alex Christensen
Comment 6
2018-11-28 13:25:39 PST
Thanks, Truitt! I'm looking into it.
Alex Christensen
Comment 7
2018-11-28 14:12:38 PST
http://trac.webkit.org/r238641
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug