Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm
@@ -212,6 +212,7 @@ TEST(SafeBrowsing, VisitUnsafeWebsite)
     auto webView = safeBrowsingView();
     auto warning = [webView _safeBrowsingWarning];
     EXPECT_EQ(warning.subviews.count, 1ull);
+    EXPECT_GT(warning.subviews.firstObject.subviews[2].frame.size.height, 0);
     checkTitleAndClick(warning.subviews.firstObject.subviews[4], "Show Details");
     EXPECT_EQ(warning.subviews.count, 2ull);
     EXPECT_FALSE(committedNavigation);
